--- a/nextjs-notion-starter-kit-main/styles/indexPage.module.css
+++ b/nextjs-notion-starter-kit-main/styles/indexPage.module.css
@@ -29,7 +29,6 @@
   padding: 0 20px;
 
   list-style-type: none;
-  background-color: dodgerblue;
 }
 
 .contentMenuListItem .contentMenuListItemTitle {
@@ -61,18 +60,20 @@
 .footer {
   height: 50px;
 
-  background-color: gray
+  /* background-color: gray */
 }
 
 .pageLayout {
   width: 100%;
   padding-left: 8%;
   padding-right: 8%;
+
+  background-color: #111111;
 }
 
 .titleBlock {
-  margin-top: 4em;
-  margin-bottom: 4em;
+  padding-top: 6em;
+  padding-bottom: 4em;
 
   display: flex;
   justify-content: center;
@@ -83,6 +84,8 @@
 .titleBlock .title {
   font-size: 40px;
   font-weight: 600;
+
+  color: white;
 }
 
 .titleBlock .description {
@@ -92,7 +95,13 @@
   word-break: keep-all;
   text-align: center;
 
-  margin-top: 1.2em;
+  margin-top: 3em;
+  margin-bottom: 1em;
+
+  line-height: 1.4em;
+  width: 66%;
+
+  color: white;
 }
 
 .titleBlock .image {
@@ -101,4 +110,68 @@
   padding-top: 3em
   /* padding-left: 1.2em;
   padding-right: 1.2em; */
+}
+
+.linkList {
+  width: 100%;
+  
+  display: flex;
+  flex-direction: column;
+
+  padding-top: 100px;
+  padding-bottom: 150px;
+
+  gap: 15px;
+}
+
+.linkBlock {
+  width: 100%;
+  /* height: 500px; */
+}
+
+.linkBlockContainer {
+  display: flex;
+  flex-direction: row;
+
+  justify-content: center;
+  align-items: center;
+
+  background-color: aliceblue;
+  padding: 40px 4%;
+  gap: 20px;
+
+  background-color: #1D1D1F;
+}
+
+.linkBlockText {
+  flex:5;
+  justify-content: center;
+
+  display: flex;
+  flex-direction: column;
+  padding: 0 40px;
+}
+
+.linkBlockTitle {
+  font-size: 32px;
+  font-weight: 600;
+  color: white;
+}
+
+.linkBlockDescription {
+  font-size: 17px;
+  font-weight: 400;
+  margin-top: 1.3em;;
+  color: white;
+}
+
+.linkBlockShow {
+  font-size: 17px;
+  font-weight: 400;
+  margin-top: 1.3em;;
+  color: dodgerblue;
+}
+.linkBlockImage {
+  max-width: 45%;
+  height: 250px;
 }
