--- a/nextjs-notion-starter-kit-main/styles/indexPage.module.css
+++ b/nextjs-notion-starter-kit-main/styles/indexPage.module.css
@@ -63,12 +63,15 @@
   /* background-color: gray */
 }
 
+.pageBackground {
+  background-color: #111111;
+
+}
+
 .pageLayout {
   width: 100%;
   padding-left: 8%;
   padding-right: 8%;
-
-  background-color: #111111;
 }
 
 .titleBlock {
@@ -98,14 +101,16 @@
   margin-top: 3em;
   margin-bottom: 1em;
 
-  line-height: 1.4em;
-  width: 66%;
+  line-height: 1.6em;
+column-gap: 2em;
+
+  width: 60%;
 
   color: white;
 }
 
 .titleBlock .image {
-  max-width: 80%;
+  max-width: 70%;
 
   padding-top: 3em
   /* padding-left: 1.2em;
@@ -136,11 +141,12 @@
   justify-content: center;
   align-items: center;
 
-  background-color: aliceblue;
   padding: 40px 4%;
   gap: 20px;
 
   background-color: #1D1D1F;
+  
+  border-radius: 8pt;
 }
 
 .linkBlockText {
@@ -149,7 +155,7 @@
 
   display: flex;
   flex-direction: column;
-  padding: 0 40px;
+  padding: 0 80px;
 }
 
 .linkBlockTitle {
@@ -163,6 +169,7 @@
   font-weight: 400;
   margin-top: 1.3em;;
   color: white;
+  line-height: 1.7em;
 }
 
 .linkBlockShow {
